--- a/index.html
+++ b/index.html
@@ -303,36 +303,42 @@
 
                                         <div class="accommodation__slider-item">
 
-                                            <a data-fancybox="gallery" href="images/men-in-black-8.jpg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/men-in-black-8.jpg" alt="">
+                                            <a rel="img1" href="https://source.unsplash.com/collection/10/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/10/" alt="">
+                                            </a>
+
+
+
+                                        </div>
+
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img2" href="https://source.unsplash.com/collection/12/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/12/" alt="">
                                             </a>
 
                                         </div>
 
                                         <div class="accommodation__slider-item">
 
-                                            <a data-fancybox="gallery" href="images/advantage-icons/11.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                            <a rel="img3" href="https://source.unsplash.com/collection/14/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/14/" alt="">
                                             </a>
 
                                         </div>
 
                                         <div class="accommodation__slider-item">
 
-                                            <a data-fancybox="gallery" href="images/advantage-icons/22.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
-                                            </a>
-
-                                        </div>
-
-                                        <div class="accommodation__slider-item">
-
-                                            <a data-fancybox="gallery" href="images/advantage-icons/44.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                            <a rel="img4" href="https://source.unsplash.com/collection/13/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/13/" alt="">
                                             </a>
 
                                         </div>
@@ -452,35 +458,54 @@
                                 </div>
                                 <div class="navigation__accommodation-content">
 
-                                    <div class="accommodation__slider">
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/33.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                    <div class="accommodation__slider ">
+
+
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img5" href="https://source.unsplash.com/collection/15/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/15/" alt="">
                                             </a>
+
+
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/44.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img6" href="https://source.unsplash.com/collection/16/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/16/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/11.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img7" href="https://source.unsplash.com/collection/17/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/17/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/22.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img8" href="https://source.unsplash.com/collection/18/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/18/" alt="">
                                             </a>
+
                                         </div>
+
+
                                     </div>
+
 
                                     <div class="accommodation-booking">
                                         <div class="accommodation-booking__text">
@@ -599,36 +624,53 @@
                                 </div>
                                 <div class="navigation__accommodation-content">
 
-                                    <div class="accommodation__slider">
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/33.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                    <div class="accommodation__slider ">
+
+
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img9" href="https://source.unsplash.com/collection/19/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/19/" alt="">
                                             </a>
+
+
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/44.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img10" href="https://source.unsplash.com/collection/20/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/20/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/11.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img11" href="https://source.unsplash.com/collection/21/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/21/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/22.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img12" href="https://source.unsplash.com/collection/22/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/22/" alt="">
                                             </a>
+
                                         </div>
+
+
                                     </div>
-
                                     <div class="accommodation-booking">
                                         <div class="accommodation-booking__text">
                                             Комфортний приватний простір для
@@ -741,36 +783,53 @@
                                 </div>
                                 <div class="navigation__accommodation-content">
 
-                                    <div class="accommodation__slider">
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/33.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                    <div class="accommodation__slider ">
+
+
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img13" href="https://source.unsplash.com/collection/23/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/23/" alt="">
                                             </a>
+
+
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/44.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img14" href="https://source.unsplash.com/collection/24/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/24/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/11.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img15" href="https://source.unsplash.com/collection/25/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/25/" alt="">
                                             </a>
+
                                         </div>
 
-                                        <div class=" accommodation__slider-item">
-                                            <a data-fancybox="gallery" href="images/advantage-icons/22.svg"
-                                                class="gallery-modal">
-                                                <img class="slider-item__img" src="images/img.jpg" alt="">
+                                        <div class="accommodation__slider-item">
+
+                                            <a rel="img16" href="https://source.unsplash.com/collection/26/"
+                                                class="gallery-modal fancybox">
+                                                <img class="slider-item__img"
+                                                    src="https://source.unsplash.com/collection/26/" alt="">
                                             </a>
+
                                         </div>
+
+
                                     </div>
-
                                     <div class="accommodation-booking">
                                         <div class="accommodation-booking__text">
                                             Комфортний приватний простір для
@@ -1141,6 +1200,82 @@
             </div>
         </div>
     </footer>
+
+
+
+
+    <!--Hiddeen -->
+    /*
+    <div class="hide">
+        <a rel="img1" href="https://source.unsplash.com/collection/10/" class="fancybox">
+
+        </a>
+
+        <a rel="img2" href="https://source.unsplash.com/collection/12/" class="fancybox">
+
+        </a>
+
+        <a rel="img3" href="https://source.unsplash.com/collection/14/" class="fancybox">
+
+        </a>
+
+        <a rel="img4" href="https://source.unsplash.com/collection/13/" class="fancybox">
+
+        </a>
+
+
+        <a rel="img5" href="https://source.unsplash.com/collection/15/" class="fancybox">
+
+        </a>
+
+        <a rel="img6" href="https://source.unsplash.com/collection/16/" class="fancybox">
+
+        </a>
+
+        <a rel="img7" href="https://source.unsplash.com/collection/17/" class="fancybox">
+
+        </a>
+
+        <a rel="img8" href="https://source.unsplash.com/collection/18/" class="fancybox">
+
+        </a>
+
+
+        <a rel="img9" href="https://source.unsplash.com/collection/19/" class="fancybox">
+
+        </a>
+
+        <a rel="img10" href="https://source.unsplash.com/collection/20/" class="fancybox">
+
+        </a>
+
+        <a rel="img11" href="https://source.unsplash.com/collection/21/" class="fancybox">
+
+        </a>
+
+        <a rel="img12" href="https://source.unsplash.com/collection/22/" class="fancybox">
+
+        </a>
+
+
+        <a rel="img13" href="https://source.unsplash.com/collection/23/" class="fancybox">
+
+        </a>
+
+        <a rel="img14" href="https://source.unsplash.com/collection/24/" class="fancybox">
+
+        </a>
+
+        <a rel="img15" href="https://source.unsplash.com/collection/25/" class="fancybox">
+
+        </a>
+
+        <a rel="img16" href="https://source.unsplash.com/collection/26/" class="fancybox">
+
+        </a>
+    </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
