removed hide section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </header>
-
+    <!--section top-->
 
     <section class="top" style="background-image: url(images/men-in-black-8.jpg);">
         <div class="top__content">
@@ -1201,78 +1201,6 @@
         </div>
     </footer>
 
-
-
-
-    <!--Hiddeen -->
-    <div class="hide">
-        <a rel="img1" href="https://source.unsplash.com/collection/10/" class="fancybox">
-
-        </a>
-
-        <a rel="img2" href="https://source.unsplash.com/collection/12/" class="fancybox">
-
-        </a>
-
-        <a rel="img3" href="https://source.unsplash.com/collection/14/" class="fancybox">
-
-        </a>
-
-        <a rel="img4" href="https://source.unsplash.com/collection/13/" class="fancybox">
-
-        </a>
-
-
-        <a rel="img5" href="https://source.unsplash.com/collection/15/" class="fancybox">
-
-        </a>
-
-        <a rel="img6" href="https://source.unsplash.com/collection/16/" class="fancybox">
-
-        </a>
-
-        <a rel="img7" href="https://source.unsplash.com/collection/17/" class="fancybox">
-
-        </a>
-
-        <a rel="img8" href="https://source.unsplash.com/collection/18/" class="fancybox">
-
-        </a>
-
-
-        <a rel="img9" href="https://source.unsplash.com/collection/19/" class="fancybox">
-
-        </a>
-
-        <a rel="img10" href="https://source.unsplash.com/collection/20/" class="fancybox">
-
-        </a>
-
-        <a rel="img11" href="https://source.unsplash.com/collection/21/" class="fancybox">
-
-        </a>
-
-        <a rel="img12" href="https://source.unsplash.com/collection/22/" class="fancybox">
-
-        </a>
-
-
-        <a rel="img13" href="https://source.unsplash.com/collection/23/" class="fancybox">
-
-        </a>
-
-        <a rel="img14" href="https://source.unsplash.com/collection/24/" class="fancybox">
-
-        </a>
-
-        <a rel="img15" href="https://source.unsplash.com/collection/25/" class="fancybox">
-
-        </a>
-
-        <a rel="img16" href="https://source.unsplash.com/collection/26/" class="fancybox">
-
-        </a>
-    </div>
 
 
 
